- fix get method for projects - start with put method for projects
